--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body> 
     <div class="container">
         <h1>Currency Converter!</h1>
+        <h1>Changes</h1>
         <form>
             <div class="amount">
                 <p>Enter Amount</p>
